# rust_server_base

./: .gitignore  Cargo.toml  README.md  poem.yaml  readme.md  request.http
src/: main.rs
src/handlers/: handler.rs
src/models/: model.rs  schema.rs
src/routes/: route.rs
views/: index.hbs
